VShop.Web - add style in home and restric access to view management only Admin

--- a/src/VShop.Web/Views/Home/Index.cshtml
+++ b/src/VShop.Web/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<ProductViewModel>
+<link rel="stylesheet" href="/css/product.css" asp-append-version="true" />
 
 <form>
     <div class="conteiner row">
