--- a/src/VShop.Web/Views/Shared/_Layout.cshtml
+++ b/src/VShop.Web/Views/Shared/_Layout.cshtml
@@ -25,9 +25,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Products</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Management</a>
-                        </li>
+                        @if(User.IsInRole("Admin")){
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Management</a>
+                            </li>
+                        }
                     </ul>
                     <ul>
                         <partial name="_LoginPartial" />
