--- a/src/VShop.Web/Views/Home/ProductDetails.cshtml
+++ b/src/VShop.Web/Views/Home/ProductDetails.cshtml
@@ -17,7 +17,13 @@
                 <b>@Model.Price.ToString("C")&nbsp;(@Model.Stock items)</b>
              </p>
 
-             <div class="row">
+             <div class="row text-black">
+                 <label class="col-md-2 control-label">Quantidade</label>
+                 <input asp-for="Quantity" class="form-control" />
+                 <span asp-validation-for="Quantity" class="text-danger"></span>
+             </div>
+
+             <div class="row mt-2">
                  <div class="col-5 col-md-5 mb-5">
                      <a asp-action="Index" class="btn btn-outline-info">Back to List</a>
                  </div>
