VShop.Web - add product details views

--- a/src/VShop.Web/Views/Home/ProductDetails.cshtml
+++ b/src/VShop.Web/Views/Home/ProductDetails.cshtml
@@ -1,7 +1,16 @@
 ﻿@model ProductViewModel
 
 <form method="post">
+
     <input asp-for="ProductId" hidden />
+    <input asp-for="Name" hidden />
+    <input asp-for="Price" hidden />
+    <input asp-for="Description" hidden />
+    <input asp-for="Stock" hidden />
+    <input asp-for="CategoryName" hidden />
+    <input asp-for="ImagemURL" hidden />
+    <input asp-for="CategoryId" hidden />
+
     <h3 class="mb-5">Product Details</h3>
     <div class="row">
         
