--- a/src/VShop.Web/Views/Home/Index.cshtml
+++ b/src/VShop.Web/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
                 
                 <a href="/Home/ProductDetails/@product.ProductId">
                     <div class="card">
-                        <img class="img-thumbnail" src="/images/@product.ImagemURL" />
+                        <img class="img-thumbnail" src="/images/@product.ImageURL" />
                         <div class="card-body">
                             <h5 class="card-title mb-2">@product.Name</h5>
                             <p class="card-text text-black">
