--- a/src/VShop.Web/Views/Products/CreateProduct.cshtml
+++ b/src/VShop.Web/Views/Products/CreateProduct.cshtml
@@ -23,10 +23,10 @@
         </div>
 
         <div class="form-group">
-            <label asp-for="ImagemURL" class="col-md-2 control-label"></label>
+            <label asp-for="ImageURL" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="ImagemURL" class="form-control" />
-                <span asp-validation-for="ImagemURL" class="text-danger"></span>
+                <input asp-for="ImageURL" class="form-control" />
+                <span asp-validation-for="ImageURL" class="text-danger"></span>
             </div>
         </div>
         <div class="row">
