--- a/src/VShop.Web/Views/Products/DeleteProduct.cshtml
+++ b/src/VShop.Web/Views/Products/DeleteProduct.cshtml
@@ -38,12 +38,12 @@
         </dd>
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ImagemURL)
+            @Html.DisplayNameFor(model => model.ImageURL)
         </dt>
     </dl>
     <div class="row">
         <div class="form-group col-md-4">
-            <img src="~/images/@Model.ImagemURL" />
+            <img src="~/images/@Model.ImageURL" />
         </div>
     </div>
 
