--- a/src/VShop.Web/Views/Home/ProductDetails.cshtml
+++ b/src/VShop.Web/Views/Home/ProductDetails.cshtml
@@ -8,14 +8,14 @@
     <input asp-for="Description" hidden />
     <input asp-for="Stock" hidden />
     <input asp-for="CategoryName" hidden />
-    <input asp-for="ImagemURL" hidden />
+    <input asp-for="ImageURL" hidden />
     <input asp-for="CategoryId" hidden />
 
     <h3 class="mb-5">Product Details</h3>
     <div class="row">
         
         <div class="col-md-4">
-            <img class="img-fluid" src="/images/@Model.ImagemURL" />
+            <img class="img-fluid" src="/images/@Model.ImageURL" />
         </div>
 
         <div class="col-md-4">
