--- a/src/VShop.Web/Views/Products/UpdateProduct.cshtml
+++ b/src/VShop.Web/Views/Products/UpdateProduct.cshtml
@@ -20,12 +20,12 @@
 
     <div class="row">
         <div class="form-group col-md-6">
-            <label asp-for="ImagemURL" class="control-label"></label>
-            <input asp-for="ImagemURL" class="form-control" />
-            <span asp-validation-for="ImagemURL" class="text-danger"></span>
+            <label asp-for="ImageURL" class="control-label"></label>
+            <input asp-for="ImageURL" class="form-control" />
+            <span asp-validation-for="ImageURL" class="text-danger"></span>
         </div>
         <div class="form-group col-md-6">
-            <img src="~/images/@Model.ImagemURL" />
+            <img src="~/images/@Model.ImageURL" />
         </div>
     </div>
     <div class="row">
