VShop.Web - solve error

--- a/src/VShop.Web/Views/Cart/Index.cshtml
+++ b/src/VShop.Web/Views/Cart/Index.cshtml
@@ -81,7 +81,7 @@
                             </div>
 
                             <div class="col-2 col-lg-1 p-0 pt-lg-4 text-center">
-                                <a asp-action="RemoveItem" asp-route-id="@item.CartHeaderId" class="btn btn-outline-danger">
+                                <a asp-action="RemoveItem" asp-route-cartId="@item.CartItemId" class="btn btn-outline-danger">
                                     <i class="fa fa-trash"></i>
                                 </a>
                             </div>
